# pfspeak

./: .gitignore  LICENSE  README.md  bootstrap_linux.sh  pyproject.toml
.github/workflows/: publish.yml
pfspeak/: __init__.py  __main__.py
pfspeak/app/: __init__.py  chat.py  config_file.py  daemon.py  directories.py  install.py  listen.py  speak.py
pfspeak/cli/: messages.py  parser.py  verify.py
pfspeak/common/: __init__.py  app.py  assets.py  dataclasses.py  defaults.py  exceptions.py  g2p.py  just_checking.py  models.py  requests.py  types.py
pfspeak/core/: __init__.py  asset.py  buffer.py  core.py  dataclasses.py  defaults.py  devices.py  dispatch.py  istftnet.py  model.py  param.py  params.py  pipeline.py  registrater.py  repo.py  repos.py  runtime.py  session.py  sources.py  stream.py  types.py
pfspeak/core/architecture/: architecture.py  istftnet.py
pfspeak/core/runtime/: buffer.py  driver.py  inference.py  marshal.py  pipeline.py  worker.py
pfspeak/core/stt/: buffer.py  stream.py
pfspeak/core/tts/: dirver.py  driver.py  inference.py  pipeline.py
pfspeak/core/tts/kokoro/: architecture.py  istftnet.py  modules.py
pfspeak/daemon/: app.py  common.py  install.py  messages.py  pfspeak.py  service.py  stt_script.py
pfspeak/example/: example.py  speech-to-text-script.py  text-to-speech-script.py
pfspeak/extra/: assets.py  concatenate.py  decorators.py  events.py  voices.py
pfspeak/extra/contrib/: playback.py
pfspeak/extra/examples/: __init__.py  basic_stt.py  basic_tts.py  chat.py  fifo.py  speech-to-text-script.py  text-to-speech-script.py
pfspeak/resources/: install.sh  pflogger
pfspeak/services/: __init__.py  install.py  listen.py  speak.py
pfspeak/stt/: buffer.py  recognizers.py  runtime.py  stream.py
pfspeak/tts/: architecture.py  dirver.py  model.py  modules.py  pipeline.py  runtime.py  specs.py
pfspeak/vendors/: en_misaki.py  espeak_misaki.py
