[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pfspeak"
version = "0.1.0"
requires-python = ">=3.11.0"

dependencies = [
    "spacy",
    "huggingface_hub",
    "platformdirs",
    "transformers",
    "sherpa_onnx",
    "sounddevice",
    "phonemizer",
    "num2words",
    "pydantic",
    "misaki",
    "torch",
    "soxr",
]
description = "Local-first, event-driven speech framework for Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sam Reynoso", email = "sam@codeoutpost.com"}
    ]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

keywords = [
    "speech",
    "tts",
    "stt",
    "voice",
    "audio",
    "llm",
]

[project.urls]
Homepage = "https://github.com/samreynoso/pfspeak"
Repository = "https://github.com/samreynoso/pfspeak"
Issues = "https://github.com/samreynoso/pfspeak/issues"


[project.scripts]
pfspeak = "pfspeak.__main__:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
